[package]
name = "nexus-cluster"
version = "0.1.0"
edition = "2021"
description = "Nexus cluster-profile runtime — pure Rust binary for Raft + IPC + federation"
authors = ["Nexus Team"]
publish = false

[[bin]]
name = "nexusd-cluster"
path = "src/main.rs"

[dependencies]
# raft owns federation orchestration (ZoneManager, bootstrap_tls, etc.)
raft = { workspace = true }
# Workspace contracts (ROOT_ZONE_ID, etc.)
contracts = { workspace = true }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gethostname = "0.5"

# C3 will add a workspace [profile.release.package."nexus-cluster"]
# entry for size optimization (LTO, panic=abort, strip).
