[package]
name = "contracts"
version = "0.1.0"
edition = "2021"
description = "Shared Rust traits and types — MutationObserver, FileEvent, Metastore"

[lib]
name = "contracts"
crate-type = ["rlib"]

[dependencies]
# Serialization for shared state types (lock_state snapshots travel through
# raft-rs's bincode pipeline). Kept behind a dep on a tiny subset of serde
# to avoid pulling the full macro crate into every dependent.
serde = { version = "1.0", features = ["derive"] }
